--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.26.1"
+  },
   "scripts": {
     "dev": "yarn compile && concurrently \"yarn compile:watch\"  \"yarn start\"",
     "start": "nodemon .",
