--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hepsiburada-api",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -33,8 +33,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "object-to-xml": "^2.0.0"
+    "axios": "^0.26.1"
   },
   "scripts": {
     "dev": "yarn compile && concurrently \"yarn compile:watch\"  \"yarn start\"",
